force-app/main/default/objects/Fine__c/Fine__c.object-meta.xml
<CustomObject>
    <label>Fine</label>
    <nameField>
        <displayFormat>Fine-{0000}</displayFormat>
        <label>Fine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>