force-app/main/default/objects/Fine__c/fields/Fine_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fine_Amount__c</fullName>
    <label>Fine Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>