force-app/main/default/objects/Fine__c/fields/Fine_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Fine_Paid_Date__c</fullName>
    <label>Fine Paid Date</label>
    <type>Date</type>
</CustomField>