force-app/main/default/objects/Fine__c/fields/Fine_Status__c.field-meta.xml
<CustomField>
    <fullName>Fine_Status__c</fullName>
    <label>Fine Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
                <default>true</default>
                <label>Unpaid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>