force-app/main/default/objects/Fine__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Fines</relationshipLabel>
    <relationshipName>Fines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>